...
        ) {
            Column {
                KarikaText(
                    modifier = Modifier
                        .padding(horizontal = 16.dp)
                        .fillMaxWidth(),
                    text = "FILTERI",
                    color = KarikaUiColors.Ink,
                    textSize = 18.sp,
                    fontWeight = FontWeight.W700,
                    textAlign = TextAlign.Center
                )
                YSpacer16()
...
